# taskman

./: .gitignore  README.md  pyproject.toml
src/taskman/: __init__.py  __main__.py  task.py
test/: test_task.py
