[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskman"
version = "0.2.0"
description = "Manage your to-do list on terminal"
license = {file = "COPYING"}
readme = "README.md"

[project.scripts]
taskman = "taskman.__main__:main"

[project.optional-dependencies]
dev = ["build==1.2.2.post1", "pytest==8.4.0", "ruff==0.11.12"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["test"]
